# advanced-python-project

./: .coveragerc  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.bak  .pre-commit-config.yaml  .pymarkdown.json  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: .ci.yml
data/: test_persistent.txt
docs/: comprehensive-financial-risk-pipeline-plan.md  curriculum.md  financial-risk-pipeline-whitepaper.md  project-plan.md  white-paper.md  workflow.md
docs/guides/: 20240723_demystifying-python-async-await_[video].md  20240724_communication_risk_[video].md  async-programming-summary.md
docs/source/: conf.py  index.rst  modules.rst  paz.rst  paz.utils.rst
notebooks/: 001-hypothesis-example.ipynb
scripts/: build_docs.py  markdown_fixer.py
src/: __init__.py
src/paz/: __init__.py
src/paz/images/: README.md  _load.py  enhance.py  processors.py
src/paz/lab/: async_example.py  hello_world.py
src/paz/utils/: __init__.py  file_utils.py  string_utils.py  web_scraper.py
tests/: test_hello_world.py  test_string_utils.py  test_web_scraper.py  test_write_to_file.py
tests/aiforge/: test_langchain_service.py  test_string_utils.py
tests/images/: test_enhance.py  test_load.py
tests/lab/: test_async.py  test_async_scraper.py  test_hello_world.py  test_hello_world_aiforge.py
tmp/: test_file_tuples.txt
