[tool.poetry]
name = "paz"
version = "0.1.0"
description = "A Python project named paz"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "paz", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
