[tool.poetry]
name = "paz"
version = "0.1.0"
description = "A Python project named paz"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "paz", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.108.3"
ipykernel = "^6.29.5"
flake8-docstrings = "^1.7.0"
flake8 = "^6.0.0"
pytest = "^8.2.2"
black = {extras = ["jupyter"], version = "^24.3.0"}
mypy = "^1.3.0"
pre-commit = "^3.3.1"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pydocstyle]
convention = "google"
add-select = ["D404", "D413"]
add-ignore = ["D100", "D104"]
match = "(?!test_).*\\.py"
match-dir = "[^\\.].*"

[tool.poetry.scripts]
docs = "scripts.build_docs:main"
