[tool.poetry]
name = "paz"
version = "0.1.0"
description = "A Python project named paz"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "paz", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
beautifulsoup4 = "^4.12.3"
diagrams = "^0.23.4"
aiforge = {git = "https://github.com/mpazaryna/aiforge.git"}

pillow = "^10.4.0"
aiofiles = "^24.1.0"
tqdm = "^4.66.4"
[tool.poetry.group.dev.dependencies]
hypothesis = "^6.108.3"
ipykernel = "^6.29.5"
flake8-docstrings = "^1.7.0"
flake8 = "^6.0.0"
pytest = "^8.2.2"
black = {extras = ["jupyter"], version = "^24.3.0"}
mypy = "^1.3.0"
pre-commit = "^3.3.1"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
coverage = "^7.2.0"
pytest-cov = "^4.0.0"
mdformat = "^0.7.16"
pymarkdownlnt = "^0.9.11"
pytest-asyncio = "^0.23.8"
aiohttp = "^3.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pydocstyle]
convention = "google"
add-select = ["D404", "D413"]
add-ignore = ["D100", "D104"]
match = "(?!test_).*\\.py"
match-dir = "[^\\.].*"

[tool.poetry.scripts]
docs = "scripts.build_docs:main"
fix-markdown = "scripts.markdown_fixer:main"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    '^tests/'
]
